--- a/Pages/_Imports.razor
+++ b/Pages/_Imports.razor
@@ -19,3 +19,4 @@
 @using WebStore.Services
 @using WebStore.Domain.Consts 
 @using Microsoft.EntityFrameworkCore;
+@using WebStore.Domain.Types.Translators;
