--- a/Pages/Shared/Layout/Header.razor
+++ b/Pages/Shared/Layout/Header.razor
@@ -38,9 +38,9 @@
                         }
                     </a>
                     <div class="panel__user-block" @onclick="async () => await ToggleUserPanelAsync()">
-                        <div class="panel__user" aria-label="Войти в личный кабинет"><img src="/icons/header/User.svg" alt="Иконка пользователя" title="Войти в личный кабинет"></div>
+                        <div class="panel__user" aria-label="Пользовательское меню"><img src="/icons/header/User.svg" alt="Иконка пользователя" title="Пользовательское меню"></div>
                         <ul class="panel__user-links @(UserPanelIsShow ? "show" : string.Empty)">
-                            <li class="user-menu__link"><a href="#" aria-label="Перейти в заказы пользователя">Заказы<img src="/icons/header/Orders (cube).svg" alt="Иконка заказов пользователя" title="Заказы"></a></li>
+                            <li class="user-menu__link"><a @onclick="NavigateToOrderHistory" aria-label="Перейти в заказы пользователя">Заказы<img src="/icons/header/Orders (cube).svg" alt="Иконка заказов пользователя" title="Заказы"></a></li>
                             <li class="user-menu__link"><a href="#" aria-label="Перейти в настройки личного кабинета пользователя">Настройки<img src="/icons/header/Settings.svg" alt="Иконка настроек" title="Настройки"></a></li>
                             <li class="user-menu__link"><a @onclick="NavigateToLogout" aria-label="Выйти из аккаунта">Выйти<img src="/icons/header/Exit.svg" alt="Иконка выхода пользователя из системы" title="Выход"></a></li>
                         </ul>
