--- a/Pages/Account/Favorites.razor.css
+++ b/Pages/Account/Favorites.razor.css
@@ -11,7 +11,7 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     padding: 0em 2em; }
   .favorites__title {
