--- a/Pages/Account/Favorites.razor.scss
+++ b/Pages/Account/Favorites.razor.scss
@@ -14,7 +14,7 @@
         display: flex;
         width: 100%;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         flex-direction: column;
         padding: 0em 2em;
     }
