--- a/Pages/Account/Orders.razor.css
+++ b/Pages/Account/Orders.razor.css
@@ -76,7 +76,7 @@
     line-height: 1.4em; }
 
 .order__products-cards {
-  gap: 0.5em;
+  gap: 1em;
   line-height: 1.3em;
   display: flex;
   flex-direction: column; }
@@ -89,19 +89,22 @@
 
 .products-cards__product-card {
   display: flex;
+  gap: 0.1em;
   flex-direction: column; }
 
 .product-card__image {
-  height: min-content;
-  width: min-content;
-  align-self: center; }
+  position: relative;
+  align-self: center;
+  padding: 50%;
+  background-color: #f6f6f6; }
   .product-card__image img {
-    min-height: 150px;
-    min-width: 150px;
-    height: 30vh;
-    width: 30vw;
-    max-width: 300px;
-    max-height: 300px;
+    margin: 2%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-52%, -52%);
+    height: 100%;
+    width: 100%;
     object-fit: contain; }
 
 .product-card__name {
@@ -126,7 +129,7 @@
     gap: 4vw; }
   .main-block__block-info {
     font-size: 14px;
-    gap: 0.6em; }
+    gap: 0.4em; }
   .products-cards__product-card {
     font-size: 14px; } }
 
